# bugu_tt

./: .env.example  .gitignore  Dockerfile  README.md  compose.test.yaml  pyproject.toml  pytest.ini  requirements.txt  schema.yml
accounts/: models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
articles/: models.py  serializers.py  urls.py  views.py
articles/migrations/: 0001_initial.py
core/: settings.py  urls.py
tests/: conftest.py  factories.py  test_accounts.py  test_articles.py
